# courier

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MAGAZINE_PARSING.md  README.md  index.html  magazines.example.md  package.json  run-dev.sh  stories.example.md  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yml  smoke-test.yml
public/: manifest.json
scripts/: build-data.mjs  fetch-summaries.mjs  resolve-deadlines.mjs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  data.rs  main.rs  yaml_emit.rs
src/components/: Dashboard.jsx  DeadlineCell.jsx  MagazineTable.jsx  RefreshButton.jsx  StoriesTable.jsx  StoryModal.jsx
src/hooks/: useMagazines.js  useStories.js
